--- a/package.json
+++ b/package.json
@@ -25,5 +25,8 @@
     "jquery": "^3.5.1",
     "npm": "^10.9.0",
     "sass": "^1.58.0"
+  },
+  "dependencies": {
+    "swiper": "^11.1.14"
   }
 }
